# Karsh.Ai

./: .gitignore  README.md  app.js  app.py  auth.py  main.py  malayalam_tts.py  pyproject.toml  requirements.txt  styles.css  theme.py  translate_and_speak.py  voice_pipeline.py
.streamlit/: config.toml  secrets.toml.example
Malayalam TTS/: malayalam_asr.py  offline_agri_brain.py  offline_stt.py  offline_tts.py  test_run.py
crop_predictor/: crop_predictor.py  gemini-code-1777020524738.txt  keralaCropDataset.txt
early_warning_system/: early_warning_system.py
imageProcessing/: extractingInfo.py  farmer_profile.json  photoAnalyzer.py
pages/: 1_Malayalam_Chatbot.py  1_Malayalam_Voice_Assistant.py  1_🎙️_Malayalam_Voice_Assistant.py  2_Crop_Predictor.py  2_🌱_Crop_Predictor.py  3_Govt_Scheme_Finder.py  3_🏛️_Govt_Scheme_Finder.py  4_Plant_Identifier.py  4_📸_Plant_Identifier.py
scheme_recommender/: central_govt_schemes.json  kerala_govt_schemes.json  recommender.py
scratch/: check_weather_alerts.py  test_gemini.py
